fix:Icons not visible

--- a/src/index.css
+++ b/src/index.css
@@ -147,8 +147,6 @@ iframe {
 .service-icon {
   width: 79.55px;
   height: 69.31px;
-  gap: 0px;
-  opacity: 0px;
 }
 
 .info-group-buy-leading {
